syntax = "proto3";
option go_package = "./grpc";

import "google/protobuf/timestamp.proto";

message GetCampaignByIDRequest {
    int64 id = 1;
}

message GetCampaignByListIDRequest {
    repeated int64 id = 1;
}

message Campaign {
    int64 id = 1;
    string campaign_name = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
    bool active =5;
}

message GetCampaignByIDResponse {
    repeated Campaign campaign=1;
}

service CampaignHandler {
    rpc GetCampaignByID(GetCampaignByIDRequest) returns (Campaign) {}
    rpc GetCampaignByListID(GetCampaignByListIDRequest) returns (GetCampaignByIDResponse) {}
}